Clean up first few cells in notebook.

--- a/VAST_Extragalactic_DR1.ipynb
+++ b/VAST_Extragalactic_DR1.ipynb
@@ -11,21 +11,9 @@
     "This notebook shows how to interact with the light curve database, consisting of three tables. These tables are described in Appendix 2 of the paper. In short, each source has one entry in the 'source' table. The individual measurements for each source are described in the 'measurement' table. Finally, there is an image table, describing the individual observations/images making up VAST Extragalactic DR1. \n",
     "This notebook also shows how to download and inspect the cutouts that are readily available for all 550k sources in this data release.\n",
     "\n",
-    "## Getting started \n",
-    "As mentioned in the `getting_started.txt` file, you should download the light_curve_database folder, VAST_Extragalactic_DR1.ipynb and environment.yaml file from the DAP: include link\n",
-    "(!Note: include the dictionary with download links later on)\n",
-    "    \n",
-    "Save these files to a single folder. The light_curve_database folder requires 500 MB of storage.\n",
-    "\n",
     "\n",
     "## Python environment\n",
-    "Before running this notebook you should use the environment.yaml file to setup the correct python environment using condas.\n",
-    "\n",
-    "Running: `conda env create -f environment.yml`\n",
-    "will create a new conda environment named: `vast_env`\n",
-    "\n",
-    "Activate it using\n",
-    "`conda activate vast_env`\n",
+    "Follow the instructions in the the [README](https://github.com/IrisdeRuiter/VAST_Extragalactic_DR1/tree/main) to create a custom conda environment: vast_env.\n",
     "\n",
     "This environment contains the basic python and astronomy packages, as well as vaex, which we need to read in the large light curve database tables efficiently.\n",
     "See the documentation on:\n",
@@ -34,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5bbf532c-e04f-45c9-bf3d-360cd18e6984",
    "metadata": {},
    "outputs": [
@@ -42,9 +30,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking light curve database\n",
-      "✅ Found light curve database folder\n",
-      "✅ Found three tables in light curve database\n",
       "Checking python packages\n",
       "✅ Found package numpy\n",
       "✅ Found package pandas\n",
@@ -58,21 +43,11 @@
    ],
    "source": [
     "# A quick check to see if things are set up correctly\n",
-    "\n",
     "import os\n",
-    "print('Checking light curve database')\n",
-    "if os.path.isdir('light_curve_database'):\n",
-    "    print(\"\\u2705\" + \" Found light curve database folder\")\n",
-    "else:\n",
-    "    print('\\U0000274C' + 'Download the light curve database from the DAP')\n",
-    "\n",
-    "if len(os.listdir('light_curve_database')) >= 3:\n",
-    "    print(\"\\u2705\" + \" Found three tables in light curve database\")\n",
-    "else:\n",
-    "    print('\\U0000274C' + 'Some of the light curve database tables are missing')\n",
+    "import importlib.util\n",
     "\n",
     "print('Checking python packages')\n",
-    "import importlib.util\n",
+    "\n",
     "for package in ['numpy', 'pandas','vaex','matplotlib', 'astropy', 'requests', 'pickle']:\n",
     "    spam_spec = importlib.util.find_spec(package)\n",
     "    found = spam_spec is not None\n",
@@ -84,24 +59,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ea9747b9-928b-4ea8-98c7-7377bb136508",
-   "metadata": {},
-   "source": [
-    "The requests and orjson packages are not used in this notebook, but are used in the helper function that creates a dictionary with all cutout urls."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce5a85d8-2fa6-4e37-841b-eb48c5ff82d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "69311413-cb9c-4e5c-ba1b-291be18f6f64",
    "metadata": {},
    "outputs": [],
@@ -115,8 +74,9 @@
     "import vaex                    # Out‑of‑core DataFrame processing for large datasets\n",
     "import matplotlib.pyplot as plt # Plotting and basic visualizations\n",
     "\n",
-    "from download_tools.download_urls import get_file\n",
-    "import pickle"
+    "from download_tools.download_urls import get_file # custom function that will be used to download files\n",
+    "import pickle                   # Reading dictionaries cutouts_dict.pkl and lightcurves_dict.pkl to\n",
+    "                                # fetch download links for files"
    ]
   },
   {
@@ -129,10 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "840e85ec-692c-4fd2-89a1-4464b2ceef77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved VAST_Extragal_DR1_image_df.csv to lightcurves/\n",
+      "Saved VAST_Extragal_DR1_measurement_df.parquet to lightcurves/\n",
+      "Saved VAST_Extragal_DR1_source_df.parquet to lightcurves/\n"
+     ]
+    }
+   ],
    "source": [
     "light_curve_path = 'lightcurves/'\n",
     "# If this directory doesn't exist yet, create the directory and download the files\n",
@@ -155,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "d06c240c-8a03-4abb-ab6e-bfaea21375c6",
    "metadata": {},
    "outputs": [],
@@ -177,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "cce5e82e-3acc-4f90-a86a-c16deae6cbb1",
    "metadata": {},
    "outputs": [
@@ -206,7 +176,7 @@
        "  4  13297621        0.53   322.579  0.000161111  -9.46075  0.000194444      253.761            0.517     270.889           0.902   15.61        0.03   11.85        0.02  81.79      0           3.98        2.69    -61.72  False                253.676              0.17  True                      False                 8469  2024-04-21 00:43:27.900000  478.794        1.0675   False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "ac5cdf74-d6f2-4217-ba3b-1d869672d00f",
    "metadata": {},
    "outputs": [
@@ -237,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "4581f1f1-9fa0-430a-83c8-f944fc9ae5bb",
    "metadata": {},
    "outputs": [
@@ -266,7 +236,7 @@
        "  4  13297702    319.625    -3.21705            5.34733e-05            5.34733e-05            1.20078    98.2316    305.363          90.5281         108.671           96.142         114.077           85.058         104.651                22          22           0             0              0  0.0224778   0.028976     18.6598      76.3262           0.15193"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3f6086c9-3f98-4c9e-9316-429b66e8fe7a",
    "metadata": {},
    "outputs": [
@@ -297,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "53318dce-a778-46db-9a25-66149d03248a",
    "metadata": {},
    "outputs": [
@@ -482,7 +452,7 @@
        "4  0.138600  0.857852  34.138411   -6.299960  50519  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "201d4a9d-6d80-4cbb-92a9-34404e878019",
    "metadata": {},
    "outputs": [
@@ -507,7 +477,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "9c80a136-d411-4f0f-a774-206f4ea066a7",
    "metadata": {},
    "outputs": [
@@ -567,7 +537,7 @@
        "  8  14801130    79.6172   -48.7028             5.36397e-05            5.36397e-05            1.05571   253.847     431.878          97.0189         102.434          127.404         134.035           81.128          85.119                10          10           0             0              0  0.165603  0.165197    1069.08      3023.58           0.124153"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "185e95f5-175e-4809-a94f-ce873534b629",
    "metadata": {},
    "outputs": [],
@@ -662,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "a075c95d-8265-4152-97b4-1f9dbd4bec3e",
    "metadata": {},
    "outputs": [
@@ -709,14 +679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "00ed58c5-4918-4fe6-afd4-43bc14159c21",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check if a directory exists to save the cutouts to\n",
     "\n",
-    "cutout_dir = 'cutouts'\n",
+    "cutout_dir = 'cutouts/'\n",
     "\n",
     "if not os.path.isdir(cutout_dir):\n",
     "    os.makedirs(cutout_dir)\n",
@@ -739,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "08f4aa87-6ad6-4656-b9d4-f4c0f8f5cb74",
    "metadata": {},
    "outputs": [],
@@ -815,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "ff07798d-9517-4a98-9a11-4b8f67bc3bd6",
    "metadata": {},
    "outputs": [],
@@ -900,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "03999001-1cc7-4c7a-99b9-6fbfe3d342be",
    "metadata": {},
    "outputs": [
@@ -908,7 +878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 13499287_VAST_Extragal_DR1_compressed_multi_extension.fits to cutouts\n",
+      "Saved 13499287_VAST_Extragal_DR1_compressed_multi_extension.fits to cutouts/\n",
       "Plotting fits cutouts for source 13499287\n",
       "There are 11 measurements/datapoints/images for this source.\n"
      ]
@@ -1039,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "f0a04334-cc3d-4c9b-810c-9332a283637a",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1050,7 @@
        "10   13499287  0.48500001430511475  93.790233  0.00010000000397364298  -4.186744  9.166667030917274e-05   67.51000213623047  0.2029999941587448   137.35000610351562  0.5550000071525574   19.860000610351562  0.05000000074505806   14.199999809265137  0.03999999910593033   156.6300048828125   0.009999999776482582  16.469999313354492  6.71999979019165   -20.889999389648438  False      4807.78076171875   -0.8500000238418579  True                      True            10020       2025-04-13 08:35:13.300000  139.1958765876649   2.0345134314520226  False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,14 +1068,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b78fefb-af3a-4483-9bb5-e85691c0fcba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "611d9522-21aa-4266-859e-ec1d9bd295c0",
    "metadata": {},
@@ -1117,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "0c5c89de-5804-476f-8e66-b8d829719acd",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "37ca3fa1-e2f9-4488-b6cb-9d4ed1ac325c",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 14213317_VAST_Extragal_DR1_compressed_multi_extension.fits to cutouts\n",
+      "Saved 14213317_VAST_Extragal_DR1_compressed_multi_extension.fits to cutouts/\n",
       "Plotting fits cutouts for source 14213317\n",
       "There are 11 measurements/datapoints/images for this source.\n"
      ]
