Changed README and markdown cells in notebook.

--- a/VAST_Extragalactic_DR1.ipynb
+++ b/VAST_Extragalactic_DR1.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "This notebook gives examples of how to interact with the high-level data products from the VAST Extragalactic DR1.\n",
-    "These products are described in detail in The ASKAP Variables and Slow Transients (VAST) Extragalactic Survey – Data Release 1.\n",
+    "These products are described in detail in The ASKAP Variables and Slow Transients (VAST) Extragalactic Survey – Data Release 1: [light curve database and cutouts](https://doi.org/10.25919/nh9d-t846)\n",
     "\n",
-    "This notebook shows how to interact with the light curve database, consisting of three tables. These tables are described in Appendix 2 of the paper. In short, each source has one entry in the 'source' table. The individual measurements for each source are described in the 'measurement' table. Finally, there is an image table, describing the individual observations/images making up VAST Extragalactic DR1. \n",
+    "This notebook downloads the light curve database locally. This is a collection of three tables. These tables are described in Appendix 2 of the de Ruiter et al (2026). In short, each source has one entry in the 'source' table, describing summary statistics for that source. The individual measurements for each source are described in the 'measurement' table. Finally, there is an image table, describing the individual observations/images making up VAST Extragalactic DR1. \n",
     "This notebook also shows how to download and inspect the cutouts that are readily available for all 550k sources in this data release.\n",
     "\n",
     "\n",
