Further updates markdown cells.

--- a/VAST_Extragalactic_DR1.ipynb
+++ b/VAST_Extragalactic_DR1.ipynb
@@ -1242,13 +1242,11 @@
    "id": "f66808a6-a97d-40ac-aa04-06c598e4ec9e",
    "metadata": {},
    "source": [
-    "These fits images show a truly compact radio source, where the source finder and flux extraction have worked properly. This variability is likely to be real. A quick cross-match against the Simbad database*, shows that this source is a known blazar.\n",
-    "\n",
-    "*: https://simbad.cds.unistra.fr/simbad/sim-fcoo\n",
+    "These fits images show a truly compact radio source, where the source finder and flux extraction have worked properly. This variability is likely to be real. A quick cross-match against the [Simbad database](https://simbad.cds.unistra.fr/simbad/sim-fcoo), shows that this source is a known blazar.\n",
     "\n",
     "\n",
-    "This tutorial shows some very basic filtering and visualisation strategies. Your science case might require complicated filtering, some of which might already be availabe within VAST tools: https://vast-survey.org/vast-tools/\n",
-    "In case you want to do more complex analysis and/or work with products that are not publicly available at this moment, consider joining VAST! https://github.com/askap-vast/vast-project/wiki\n",
+    "This tutorial shows some very basic filtering and visualisation strategies. Your science case might require complicated filtering, some of which might already be availabe within [VAST tools](https://vast-survey.org/vast-tools/).\n",
+    "In case you want to do more complex analysis and/or work with products that are not publicly available at this moment, consider [joining VAST!](https://vast-survey.org/Team/)\n",
     "\n",
     "\n"
    ]
