Notebook suggestions Dougal: allow for rerunning cell that downloads the lightcurves directory and hide annoying column in image table.

--- a/VAST_Extragalactic_DR1.ipynb
+++ b/VAST_Extragalactic_DR1.ipynb
@@ -109,10 +109,12 @@
     "if not os.path.isdir(light_curve_path):\n",
     "    os.makedirs(light_curve_path)\n",
     "    \n",
-    "    with open(\"download_tools/lightcurves_dict.pkl\", \"rb\") as f:\n",
-    "        lightcurve_dict = pickle.load(f)\n",
-    "    for filename, url in lightcurve_dict.items():\n",
-    "        get_file(url, light_curve_path, filename)\n"
+    "with open(\"download_tools/lightcurves_dict.pkl\", \"rb\") as f:\n",
+    "    lightcurve_dict = pickle.load(f)\n",
+    "# Will download the lightcurve directory from the CSIRO DAP (~500 MB)\n",
+    "for filename, url in lightcurve_dict.items():\n",
+    "    if not os.path.isfile(light_curve_path + filename):\n",
+    "        get_file(url, light_curve_path, filename)"
    ]
   },
   {
@@ -132,7 +134,7 @@
    "source": [
     "measurements = vaex.open(light_curve_path+'VAST_Extragal_DR1_measurement_df.parquet')\n",
     "sources = vaex.open(light_curve_path+'VAST_Extragal_DR1_source_df.parquet')\n",
-    "images = pd.read_csv(light_curve_path+'VAST_Extragal_DR1_image_df.csv')"
+    "images = pd.read_csv(light_curve_path+'VAST_Extragal_DR1_image_df.csv', index_col = 0)"
    ]
   },
   {
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "53318dce-a778-46db-9a25-66149d03248a",
    "metadata": {},
    "outputs": [
@@ -292,7 +294,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>image_id</th>\n",
        "      <th>name</th>\n",
        "      <th>datetime</th>\n",
@@ -315,7 +316,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>7251</td>\n",
        "      <td>VAST_Extragal_DR1_VAST_0126+00.SB50516.image.fits</td>\n",
        "      <td>2023-06-14 01:36:10.100000+00:00</td>\n",
@@ -336,7 +336,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>7252</td>\n",
        "      <td>VAST_Extragal_DR1_VAST_0126+06.SB50515.image.fits</td>\n",
        "      <td>2023-06-14 01:22:53.800000+00:00</td>\n",
@@ -357,7 +356,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>7253</td>\n",
        "      <td>VAST_Extragal_DR1_VAST_0151+00.SB50517.image.fits</td>\n",
        "      <td>2023-06-14 01:49:56.200000+00:00</td>\n",
@@ -378,7 +376,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>7254</td>\n",
        "      <td>VAST_Extragal_DR1_VAST_0216+00.SB50518.image.fits</td>\n",
        "      <td>2023-06-14 02:03:02.500000+00:00</td>\n",
@@ -399,7 +396,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>7255</td>\n",
        "      <td>VAST_Extragal_DR1_VAST_0216-06.SB50519.image.fits</td>\n",
        "      <td>2023-06-14 02:16:48.600000+00:00</td>\n",
@@ -423,12 +419,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  image_id                                               name  \\\n",
-       "0           0      7251  VAST_Extragal_DR1_VAST_0126+00.SB50516.image.fits   \n",
-       "1           1      7252  VAST_Extragal_DR1_VAST_0126+06.SB50515.image.fits   \n",
-       "2           2      7253  VAST_Extragal_DR1_VAST_0151+00.SB50517.image.fits   \n",
-       "3           3      7254  VAST_Extragal_DR1_VAST_0216+00.SB50518.image.fits   \n",
-       "4           4      7255  VAST_Extragal_DR1_VAST_0216-06.SB50519.image.fits   \n",
+       "   image_id                                               name  \\\n",
+       "0      7251  VAST_Extragal_DR1_VAST_0126+00.SB50516.image.fits   \n",
+       "1      7252  VAST_Extragal_DR1_VAST_0126+06.SB50515.image.fits   \n",
+       "2      7253  VAST_Extragal_DR1_VAST_0151+00.SB50517.image.fits   \n",
+       "3      7254  VAST_Extragal_DR1_VAST_0216+00.SB50518.image.fits   \n",
+       "4      7255  VAST_Extragal_DR1_VAST_0216-06.SB50519.image.fits   \n",
        "\n",
        "                           datetime            jd  duration  physical_bmaj  \\\n",
        "0  2023-06-14 01:36:10.100000+00:00  2.460110e+06   716.636       6.670153   \n",
@@ -452,7 +448,7 @@
        "4  0.138600  0.857852  34.138411   -6.299960  50519  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,14 +1251,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ceaf5fa5-1571-4702-9bd9-b3e0e8555162",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d76c3b16-f8cd-48e1-9127-c1d68500382d",
    "metadata": {},
    "outputs": [],
    "source": []
